[gd_scene load_steps=6 format=3 uid="uid://b3gnvtrokedm3"]

[ext_resource type="Script" path="res://game_over.gd" id="1_6fity"]
[ext_resource type="Texture2D" uid="uid://bscmx8ksd4txu" path="res://Assets/End Screen Background.png" id="2_ijcsd"]
[ext_resource type="Texture2D" uid="uid://cfvueo3pf46k2" path="res://Assets/New Game Button End Screen transparent.png" id="3_hdy7v"]
[ext_resource type="Texture2D" uid="uid://br0m6bl6c46hn" path="res://Assets/Main Menu Button End Screen transparent.png" id="4_fhaj3"]
[ext_resource type="FontFile" uid="uid://buuhuumykppev" path="res://Bungee/Bungee-Regular.ttf" id="5_4qtkb"]

[node name="game_over" type="Node2D"]
script = ExtResource("1_6fity")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_ijcsd")

[node name="NewGameButton" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 1376.0
offset_top = 504.0
offset_right = 1787.0
offset_bottom = 787.0
texture_normal = ExtResource("3_hdy7v")

[node name="MainMenuButton" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 16.0
offset_top = 512.0
offset_right = 480.0
offset_bottom = 795.0
texture_normal = ExtResource("4_fhaj3")

[node name="FinalScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 432.0
offset_top = 600.0
offset_right = 1416.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_4qtkb")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="TextureRect/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="TextureRect/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
